Nuevo diseño y mas opciones

--- a/app/src/main/res/layout/recycler_item_detalleviaje.xml
+++ b/app/src/main/res/layout/recycler_item_detalleviaje.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:background="@color/colorPrimary"
     android:layout_height="wrap_content"
-    android:id="@+id/itemCard"
+    android:id="@+id/itemCarddetalle"
     android:layout_margin="4dp">
 
     <TextView
@@ -25,7 +25,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/item_destino"
+        android:id="@+id/item_nombre"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="23dp"
@@ -41,40 +41,74 @@
         app:layout_constraintVertical_bias="1.0" />
 
     <TextView
-        android:id="@+id/item_horasal"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="TextView"
-        android:textSize="24sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.127"
-        android:textColor="#FFFFFF"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/item_destino" />
-
-    <TextView
-        android:id="@+id/item_nombre"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="TextView"
-        android:textColor="#FFFFFF"
-        android:textSize="24sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.127"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/item_horasal" />
-
-    <TextView
         android:id="@+id/item_nocontrol"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="TextView"
         android:textSize="24sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.127"
+        android:textColor="#FFFFFF"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/item_nombre" />
+
+    <TextView
+        android:id="@+id/item_carrera"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="TextView"
+        android:textColor="#FFFFFF"
+        android:textSize="24sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.127"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/item_nocontrol" />
+
+    <TextView
+        android:id="@+id/item_semestre"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="TextView"
+        android:textSize="24sp"
         android:textColor="#FFFFFF"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.127"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/item_nombre" />
+        app:layout_constraintTop_toBottomOf="@+id/item_carrera" />
+
+    <Button
+        android:id="@+id/btnaceptarpas"
+        android:layout_width="96dp"
+        android:layout_height="49dp"
+        android:background="#4caf50"
+        android:textColor="#ffffff"
+        android:layout_marginStart="143dp"
+        android:layout_marginLeft="143dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="27dp"
+        android:layout_marginRight="27dp"
+        android:text="@string/btnaceptar"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/item_nombre"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/btnrechazarpas"
+        android:layout_width="95dp"
+        android:layout_height="48dp"
+        android:layout_marginStart="143dp"
+        android:layout_marginLeft="143dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="27dp"
+        android:layout_marginRight="27dp"
+        android:layout_marginBottom="31dp"
+        android:background="#FF1744"
+        android:text="@string/btnrechazar"
+        android:textColor="#FFFFFF"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/item_carrera"
+        app:layout_constraintTop_toBottomOf="@+id/btnaceptarpas" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
