--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,68 +6,120 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:clipChildren="false"
-        android:clipToPadding="false"
-        android:orientation="vertical"
-        android:padding="24dp"
-        android:paddingTop="20dp"
+    <Button
+        android:id="@+id/btnIniciar"
+        android:layout_width="324dp"
+        android:layout_height="38dp"
+        android:layout_marginStart="45dp"
+        android:layout_marginLeft="45dp"
+        android:layout_marginTop="40dp"
+        android:layout_marginEnd="45dp"
+        android:layout_marginRight="45dp"
+        android:background="#891e35"
+        android:onClick="validasesion"
+        android:text="@string/btniniciarsesion"
+        android:textColor="#FFFFFF"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />
+
+    <Button
+        android:id="@+id/btnregistro"
+        android:layout_width="324dp"
+        android:layout_height="38dp"
+        android:layout_marginStart="45dp"
+        android:layout_marginLeft="45dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="45dp"
+        android:layout_marginRight="45dp"
+        android:background="#ffffff"
+        android:onClick="enviaralregistro"
+        android:text="@string/btnregistro"
+        android:textColor="#891e35"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnIniciar" />
+
+
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="157dp"
+        android:layout_marginLeft="157dp"
+        android:layout_marginTop="105dp"
+        android:layout_marginEnd="166dp"
+        android:onClick="enviaradmin"
+        android:layout_marginRight="166dp"
+        android:layout_marginBottom="101dp"
+        android:text="Button"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0"
-        tools:layout_editor_absoluteX="0dp">
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnregistro" />
 
-        <LinearLayout
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/textInputLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="45dp"
+        android:layout_marginLeft="45dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="45dp"
+        android:layout_marginRight="45dp"
+        android:outlineAmbientShadowColor="#891e35"
+        android:textColorHint="#922B3E"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView3">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/edtcontrolregistro"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:layout_height="wrap_content"
+            android:drawableLeft="@drawable/ic_action_name"
+            android:singleLine="true"
+            android:inputType="number"
+            android:hint="@string/edtnocontrol" />
+    </com.google.android.material.textfield.TextInputLayout>
 
-            <ImageView
-                android:id="@+id/imageView"
-                android:layout_width="107dp"
-                android:layout_height="103dp"
-                android:layout_marginTop="88dp"
-                app:srcCompat="@color/colorAccent" />
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/textInputLayout2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="45dp"
+        android:layout_marginLeft="45dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginEnd="45dp"
+        android:layout_marginRight="45dp"
+        android:textColorHint="#922B3E"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textInputLayout">
 
-            <EditText
-                android:id="@+id/edtcontrol"
-                android:layout_width="253dp"
-                android:layout_height="48dp"
-                android:layout_marginTop="40dp"
-                android:ems="10"
-                android:hint="@string/edtnocontrol"
-                android:inputType="number"
-                android:textAlignment="center" />
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/edtnip"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:singleLine="true"
+            android:inputType="number"
+            android:drawableLeft="@drawable/ic_action_nip"
+            android:hint="@string/edtnip" />
+    </com.google.android.material.textfield.TextInputLayout>
 
-            <EditText
-                android:id="@+id/edtnip"
-                android:layout_width="253dp"
-                android:layout_height="48dp"
-                android:layout_marginTop="40dp"
-                android:ems="10"
-                android:hint="@string/edtnip"
-                android:inputType="numberPassword"
-                android:textAlignment="center" />
-
-            <Button
-                android:id="@+id/btnIniciar"
-                android:layout_width="253dp"
-                android:layout_height="48dp"
-                android:onClick="enviarrecycler"
-                android:layout_marginTop="40dp"
-                android:text="@string/btniniciarsesion" />
-
-            <Button
-                android:id="@+id/btnregistro"
-                android:layout_width="253dp"
-                android:layout_height="48dp"
-                android:layout_marginTop="30dp"
-                android:onClick="enviaralregistro"
-                android:text="@string/btnregistro" />
-
-        </LinearLayout>
-    </ScrollView>
+    <ImageView
+        android:id="@+id/imageView3"
+        android:layout_width="212dp"
+        android:layout_height="223dp"
+        android:layout_marginStart="99dp"
+        android:layout_marginLeft="99dp"
+        android:layout_marginTop="28dp"
+        android:layout_marginEnd="100dp"
+        android:layout_marginRight="100dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/login_image" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
