--- a/app/src/main/res/layout/recycler_item_cviaje.xml
+++ b/app/src/main/res/layout/recycler_item_cviaje.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:background="@color/colorPrimary"
     android:layout_height="wrap_content"
-    android:id="@+id/itemCard"
+    android:orientation="vertical"
+    android:background="@color/colorPrimary"
+    android:id="@+id/itemCardcviaje"
     android:layout_margin="4dp">
 
     <TextView
@@ -75,6 +74,5 @@
         app:layout_constraintHorizontal_bias="0.127"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/item_nombre" />
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
