--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -81,6 +81,7 @@
             android:drawableLeft="@drawable/ic_action_name"
             android:singleLine="true"
             android:inputType="number"
+            android:maxLength="8"
             android:hint="@string/edtnocontrol" />
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -103,7 +104,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:singleLine="true"
-            android:inputType="number"
+            android:inputType="numberPassword"
+            android:maxLength="4"
             android:drawableLeft="@drawable/ic_action_nip"
             android:hint="@string/edtnip" />
     </com.google.android.material.textfield.TextInputLayout>
